--- a/Term Project II/Advanced Database Topics II/Advanced Database Topics II.csproj
+++ b/Term Project II/Advanced Database Topics II/Advanced Database Topics II.csproj
@@ -47,16 +47,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseOperations.cs" />
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Models\Query1Model.cs" />
+    <Compile Include="Models\Query2Model.cs" />
+    <Compile Include="Models\Query3Model.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Simulation.cs" />
     <Compile Include="SimulationModel.cs" />
+    <Compile Include="SimulationPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SimulationPage.Designer.cs">
+      <DependentUpon>SimulationPage.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -66,6 +69,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SimulationPage.resx">
+      <DependentUpon>SimulationPage.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
